# JupaBot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
db/: pb_schema.json
src/: commands.rs  db.rs  main.rs  shared.rs  util.rs
